<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.p_code.diagnostictest.PetunjukActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aturan1"
            android:textSize="16sp"
            android:padding="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aturan2"
            android:textSize="16sp"
            android:padding="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aturan3"
            android:textSize="16sp"
            android:padding="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aturan4"
            android:textSize="16sp"
            android:padding="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aturan5"
            android:textSize="16sp"
            android:padding="8dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvMulai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="MULAI UJIAN"
        android:textColor="@android:color/white"
        android:padding="20dp"
        android:textSize="24dp"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"/>
</FrameLayout>

