<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="@android:color/white">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="Pemuaian"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:text="@string/suhu_3_1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="4dp"
            android:textStyle="bold"
            android:text="1. Koefisien Muai Panjang"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:text="@string/suhu_3_2"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:src="@drawable/suhu3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="4dp"
            android:textStyle="bold"
            android:text="2. Koefisien Muai Luas"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:text="@string/suhu_3_3"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:src="@drawable/suhu4"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="4dp"
            android:textStyle="bold"
            android:text="3. Koefisien Muai Volume"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:text="@string/suhu_3_4"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:src="@drawable/suhu5"/>



    </LinearLayout>
</ScrollView>
