<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:background="@android:color/white"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textStyle="bold"
            android:textSize="24dp"
            android:text="Termometer"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:text="@string/suhu_2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="4dp"
            android:textStyle="bold"
            android:text="1. Jenis-jenis Termometer Menurut Bahannya"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:text="a.	Termometer air raksa
b.	Termometer alkohol
c.	Termometer Platina
d.	Termometer Gas
e.	Termometer Bimetal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="4dp"
            android:textStyle="bold"
            android:text="2. Jenis-jenis Termometer Menuruh Kegunaannya"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:text="a.	Termometer Klinis
b.	Termometer Dinding
c.	Termometer max-min Six Bellani"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="4dp"
            android:textStyle="bold"
            android:text="3. Skala dalam Termometer"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:paddingRight="16dp"
            android:text="@string/suhu_2_3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:text="Untuk mengetahui hubungan antara keempat skala di atas, perhatikan tabel berikut :"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:paddingLeft="32dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:src="@drawable/suhu1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:paddingRight="16dp"
            android:text="@string/suhu_2_3_4_3"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:paddingLeft="32dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:src="@drawable/suhu2"/>



    </LinearLayout>
</ScrollView>
